[tool.poetry]
name = "experiment-flows"
version = "0.1.0"
description = ""
authors = ["Greg-Ethermed <greg@ethermed.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.41.0"
python-dotenv = "^1.0.1"
scorcery = { git = "https://github.com/ethermed/scorcery.git", rev = "6f30ca9", subdirectory = "py_scorcery"}
backoff = "^2.2.1"
openai = "0.28.0"
diskcache = "^5.6.3"
graph-tools = { git = "git@github.com:ethermed/graph_tools.git", rev = "4eb6a21"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
